# ferrum

./: .gitignore  package-lock.json
client/: package.json
client/src/: App.js  Contact.js  Faq.js  global.css
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
server/src/database/: ferrum_database.db
server/src/database/models/: users.rs
