[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
diesel = { version = "2.1.4", features = ["sqlite"] }