[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.196"
serde_derive = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
sea-orm = { version = "0.12.14", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono" ] }
chrono = "0.4.33"
bcrypt = "0.15"